--- a/public/index.html
+++ b/public/index.html
@@ -47,8 +47,81 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-
-    <title>Calculator</title>
+    <!-- Open graph protocol meta tags -->
+    <meta
+      property="og:title"
+      content="React Calculator"
+    />
+    <meta
+      property="og:type"
+      content="website"
+    />
+    <meta
+      property="og:url"
+      content="https://Stathis-Renieris.github.io/react-calculator-app"
+    />
+    <meta
+      property="og:description"
+      content="A simple react calculator"
+    />
+    <meta
+      property="og:image"
+      content="%PUBLIC_URL%/social-share.jpg"
+    />
+    <meta
+      property="og:image:secure_url"
+      content="%PUBLIC_URL%/social-share.jpg"
+    />
+    <meta
+      property="og:image:type"
+      content="image/jpeg"
+    />
+    <meta
+      property="og:image:width"
+      content="1280"
+    />
+    <meta
+      property="og:image:height"
+      content="640"
+    />
+    <meta
+      property="og:image:alt"
+      content="A react calculator"
+    />
+    <meta
+      property="og:locale"
+      content="en_US"
+    />
+    <meta
+      property="og:site_name"
+      content="A simple react calculator"
+    />
+    <!-- Twitter cards meta tags -->
+    <meta
+      name="twitter:card"
+      content="summary_large_image"
+    />
+    <meta
+      name="twitter:site"
+      content="@SimpleReactCalculator"
+    />
+    <meta
+      name="twitter:title"
+      content="React Calculator"
+    />
+    <meta
+      name="twitter:description"
+      content="A simple react calculator"
+    />
+    <meta
+      name="twitter:image"
+      content="%PUBLIC_URL%/social-share.jpg"
+    />
+    <meta
+      name="twitter:image:alt"
+      content="A react calculator"
+    />
+    <title>React Calculator</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
